--- a/personalization.html
+++ b/personalization.html
@@ -19,7 +19,7 @@
          <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
         </ul>
       </div>
-      <h1><div class="panel" style="font-family: 'Raleway', serif; font-size: 24px;">Technoon</div> <small>Tutorials <br> Personalization with Search Engines </small></h1>
+      <h1>Technoon <small>Tutorials <br> Personalization with Search Engines </small></h1>
       <hr />
     </div>
   </div>
@@ -42,7 +42,7 @@ Retailers report higher customer satisfaction & conversions by showing customer 
 There are plenty of personalization software tools available in the market which primarily bring in set of 
 recommendated items for a given product or a shopping cart. 
 </br>
-<div class="panel" style="font-family: 'Raleway', serif; font-size: 18px;" >
+<div class="panel" style="font-family: 'Raleway', serif; font-size: 14px;" >
 e.g: <br>
 Customer who bought also bought </br>
 After viewed by </br>
@@ -60,7 +60,7 @@ for the products ?
 <p>
 Here is the thought process, how about we personalize the product we show to the customer is 
 based on the below behaviours. 
-<div class="panel" style="font-family: 'Raleway', serif; font-size: 18px;" >
+<div class="panel" style="font-family: 'Raleway', serif; font-size: 14px;" >
 What products the customer is searching for ? </br>
 What categories the customer is browsing ? </br>
 What refinements / facets the customer is using ? </br>
@@ -88,7 +88,7 @@ these category in the next query to the search engine and boost the products tha
 e.g.  
 A customer who wants to buy a Laptop may be interested in browsing the 'computer & laptop' department. 
 So when the customer searches for a 'Laptop', refine and boost the results from these departments.
-<div class="panel" style="font-family: 'Raleway', serif; font-size: 18px;" >
+<div class="panel" style="font-family: 'Raleway', serif; font-size: 14px;" >
 st = 15 inch laptop </br>
 q = {!boost b=$b v=$st} </br>
 b = query(category:last_clicked)</br>
@@ -115,7 +115,7 @@ e.g. Laptops with 8GB Memory, Laptops with 2.4 GHZ or particular Brand of laptop
 With these behaviour, you can bring in more refined search results from the search engine and show the Laptops which the customer might be interested in to buy.  
 </br>
 These parameterized queries are supported by Solr with the help of functional queries.
-<div class="panel" style="font-family: 'Raleway', serif; font-size: 18px;" >
+<div class="panel" style="font-family: 'Raleway', serif; font-size: 14px;" >
 st = Laptop </br>
 q = {!boost b=$b v=$st} </br>
 b = prod(sum(1, query($pref)), $diff) </br>
