--- a/personalization.html
+++ b/personalization.html
@@ -16,7 +16,7 @@
       <div class="nav-bar right">
        <ul class="button-group">
          <li><a href="#" class="small button">Home</a></li>
-         <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
+         <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About</a></li>
         </ul>
       </div>
       <h1>Technoon <small>Tutorials <br> Personalization with Search Engines </small></h1>
@@ -33,7 +33,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<h6>Written by <a href="#">Rajesh V</a> on Nov 2014</h6>
+<div class="panel" style="font-family: 'Raleway', serif; font-size: 14px;" >Written by <a href="#">Rajesh V</a> on Nov 2014 </div>
 
 <h4><a href="#"><div class="">Preface</div></a></h4>
 <p>
@@ -171,7 +171,7 @@ Solr Functional Queries </a> for more information.
         <div class="large-6 columns">
           <ul class="inline-list right">
                <li><a href="http://technoon.github.io/lessons">Home</a></li>
-               <li><a href="http://linkedin.com/in/vrkrajesh">About me</a></li>
+               <li><a href="http://linkedin.com/in/vrkrajesh">About</a></li>
           </ul>
         </div>
       </div>
