--- a/personalization.html
+++ b/personalization.html
@@ -33,7 +33,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<div class="panel" style="font-family: 'Raleway', serif; font-size: 14px;" >Written by <a href="#">Rajesh V</a> on Nov 2014 </div>
+<div style="font-family: 'Raleway', serif; font-size: 14px;" >Written by <a href="#">Rajesh V</a> on Nov 2014 </div>
 
 <h4><a href="#"><div class="">Preface</div></a></h4>
 <p>
