--- a/personalization.html
+++ b/personalization.html
@@ -15,7 +15,7 @@
     <div class="large-12 columns">
       <div class="nav-bar right">
        <ul class="button-group">
-         <li><a href="#" class="small button">Home</a></li>
+         <li><a href="http://technoon.github.io/lessons/" class="small button">Home</a></li>
          <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About</a></li>
         </ul>
       </div>
@@ -26,15 +26,12 @@
  
 <!-- End Nav -->
 <!-- Main Page Content and Sidebar -->
-
 <div class="row">
-
 <!-- Main Blog Content -->
 <div class="large-9 columns" role="content">
- 
 <article>
 <div style="font-family: 'Raleway', serif; font-size: 14px;" >Written by <a href="#">Rajesh V</a> on Nov 2014 </div>
-
+<br>
 <h4><a href="#"><div class="">Preface</div></a></h4>
 <p>
 Product recommendations & product boosting are the big contributers in the eCommerce personalization space.  
