--- a/personalization.html
+++ b/personalization.html
@@ -34,7 +34,7 @@
 <br>
 <h4><a href="#"><div class="">Preface</div></a></h4>
 <p>
-Product recommendations & product boosting are the big contributors in the eCommerce personalization space.  
+Product recommendations & product boosting are one of the biggest contributors in the eCommerce personalization space.  
 Retailers report higher customer satisfaction & conversions by showing the customer with their products of interest.
 There are plenty of personalization of-the-shelf tools available in the market which primarily bring in the 
 recommendated items for a given product & customer history of purchases.
