--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  
 <article>
  
-<h6>Written by <a href="#">Rajeshkumar Venkatesan</a> on Jan, 2014.</h6>
+<h6>Written by <a href="#">Rajeshkumar Venkatesan</a></h6>
 
 <br>
 
