--- a/arduino.html
+++ b/arduino.html
@@ -32,7 +32,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<h6>Written by <a href="#">Rajesh V</a> on Nov, 2013.</h6>
+<h6>Written by <a href="#">Rajesh V</a></h6>
 
 <div class="row">
 <div class="large-6 columns">
