--- a/paymentgateway.html
+++ b/paymentgateway.html
@@ -32,7 +32,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<h6>Written by <a href="#">Rajesh V</a> on Sep 2014</h6>
+<h6>Written by <a href="#">Rajesh V</a></h6>
 
 <h4><a href="#">1. Preface</a></h4>
 <p>
