--- a/chef.html
+++ b/chef.html
@@ -32,7 +32,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<h6>Written by <a href="#">Rajesh V</a> on Aug, 2014.</h6>
+<h6>Written by <a href="#">Rajesh V</a></h6>
 
 <div class="row">
   <div class="large-12 columns">
