--- a/Endeca-Cartridge-ATG-CRS.html
+++ b/Endeca-Cartridge-ATG-CRS.html
@@ -31,7 +31,7 @@
 <div class="large-9 columns" role="content">
  
 <article>
-<h6>Written by <a href="#">Rajesh V</a> on July, 2014.</h6>
+<h6>Written by <a href="#">Rajesh V</a></h6>
 
 <div class="row">
 <div class="large-6 columns">
