--- a/mongodb-nodejs.html
+++ b/mongodb-nodejs.html
@@ -32,7 +32,7 @@
  
 <article>
  
-<h6>Written by <a href="#">Rajesh V</a> on Jan, 2014.</h6>
+<h6>Written by <a href="#">Rajesh V</a></h6>
 
 <br>
 
